--- a/app.json
+++ b/app.json
@@ -20,13 +20,12 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/splash.png",
-        "backgroundColor": "#ffffff",
-        "resizeMode": "contain"
+        "backgroundColor": "#ffffff"
       },
       "package": "com.sasichimmili.Algo"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/splash.png"
     },
     "extra": {
       "eas": {
